# dapr_playground

./: README.md
dapr-client/: docker-compose.yaml
dapr-client/app/: Dockerfile  pyproject.toml
dapr-client/app/app/: main.py
dapr-kafka/: docker-compose.yaml
dapr-kafka/app/: pyproject.toml
dapr-kafka/app/app/: main.py
dapr-kafka/components/: kafka.yaml
hello-world/app/: pyproject.toml
hello-world/app/app/: main.py
